--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "binary-tree",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://gitname.github.io/BinaryTree",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -11,7 +12,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test"
+    "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
